# CE301-Final-Year-Project

./: .gitignore  GameEngine.sln  LICENSE.txt  Readme.md
Assignment related/: 1802882_ma18533_CE301_Abstract.docx  PDO notes.txt  Report Notes.docx
Assignment related/Challenge Week Presentation/: Challenge Week Presentation ma18533 1802002.pptx
Assignment related/Reading/: Ma18533_1802882_CE301_Background_reading.docx
GameEngine/: CMakeLists.txt  GameEngine.vcxproj  GameEngine.vcxproj.filters  imgui.ini
GameEngine/libs/GLFW/: CMakeLists.txt  GLFW.vcxproj
GameEngine/libs/Glad/: CMakeLists.txt  Desktop - Shortcut.lnk  Glad.vcxproj
GameEngine/libs/Glad/include/glad/: glad.h
GameEngine/libs/Glad/src/: glad.c
GameEngine/libs/freetype/: FreeType.vcxproj
GameEngine/libs/freetype/builds/windows/visualc/: freetype.sln  freetype.vcxproj  freetype.vcxproj.filters
GameEngine/libs/freetype/docs/: INSTALL.ANY
GameEngine/libs/freetype/include/freetype/config/: ftheader.h
GameEngine/libs/freetype/include/freetype/internal/: ftdebug.h
GameEngine/libs/imgui/: CMakeLists.txt  ImGui.vcxproj  ImGui.vcxproj.filters  imgui_impl_cust.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
GameEngine/res/shaders/: FontVertex.shader  instancedRendererTest-frag.shader  quadprimtest-frag.shader
GameEngine/res/textures/: Citations.txt
GameEngine/src/: Object.h  core.h  gepch.cpp  gepch.h
GameEngine/src/App/: Action.cpp  Action.h  CameraEventHandler.cpp  CameraEventHandler.h  CharacterObject.cpp  CharacterObject.h  ClickHandler.cpp  ClickHandler.h  Controller.cpp  Controller.h  EventHandlers.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  InputHandler.h  Interfaces.h  MouseState.cpp  MouseState.h  ObjectPicker.cpp  ObjectPicker.h  Random.cpp  Random.h  Sprite.cpp  Sprite.h  StencilDrawer.cpp  StencilDrawer.h  TextureMap.cpp  TextureMap.h  Vector2D.cpp  Vector2D.h  main.cpp
GameEngine/src/App/Layers/: ILayer.h  MenuLayer.cpp  MenuLayer.h  WorldLayer.cpp  WorldLayer.h
GameEngine/src/App/Tests/: TestGame.cpp  TestGame.h  Tests.cpp  Tests.h
GameEngine/src/App/WorldGeneration/: GeneratorSettings.h  MapGenerator.cpp  MapGenerator.h  Noise.cpp  Noise.h  ObjectGenerator.cpp  ObjectGenerator.h  PoissonGenerator.cpp  PoissonGenerator.h  Tile.cpp  Tile.h  World.cpp  World.h
GameEngine/src/GE/: BaseApp.cpp  BaseApp.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Logger.cpp  Logger.h  MousePosition.cpp  MousePosition.h  Window.cpp  Window.h
GameEngine/src/GE/Events/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h
GameEngine/src/GE/Events/Keys/: KeyEvent.cpp  KeyEvent.h  KeyHeldEvent.cpp  KeyHeldEvent.h  KeyPressedEvent.cpp  KeyPressedEvent.h  KeyReleasedEvent.cpp  KeyReleasedEvent.h
GameEngine/src/GE/Events/Mouse/: MouseClickedEvent.cpp  MouseClickedEvent.h  MouseEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  MouseReleasedEvent.cpp  MouseReleasedEvent.h  MouseScrolledEvent.cpp  MouseScrolledEvent.h
GameEngine/src/GE/Events/Window/: WindowClosedEvent.cpp  WindowClosedEvent.h  WindowResizedEvent.cpp  WindowResizedEvent.h
GameEngine/src/GE/Graphics/: FontLoader.cpp  FontLoader.h  FontRenderer.cpp  FontRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h
GameEngineUnitTest/: CMakeLists.txt  Customrule.props  Customrule.targets  Customrule.xml  GameEngineUnitTest.vcxproj  GameEngineUnitTest.vcxproj.filters  ObjectTest.cpp  README.md  gepchTest.cpp
GameEngineUnitTest/App/: MouseStateTest.cpp  MouseStateTest.h  SpriteTest.cpp  SpriteTest.h  TextureMapTest.cpp
GameEngineUnitTest/GE/: WindowTest.cpp  WindowTest.h
GameEngineUnitTest/GE/Graphics/: RendererTest.cpp  RendererTest.h
PublishedVersions/0.9.9/: imgui.ini
PublishedVersions/0.9.9/res/shaders/: FragmentShader.shader  batchedRendererTest-frag.shader  batchedRendererTest-vert.shader
PublishedVersions/1.0.1 with bileanear world gen/: imgui.ini
PublishedVersions/1.0.1 with bileanear world gen/GameEngine2020/r004hs/: r004hs.vtune
PublishedVersions/1.0.1 with bileanear world gen/res/shaders/: FontFragment.shader  VertexShader.shader  batchedRendererTest-frag.shader  quadprimtest-vert.shader
PublishedVersions/1.0.1/res/fonts/: arial.fnt
PublishedVersions/1.0.1/res/shaders/: 2dcamtest-frag.shader  batchedRendererTest-vert.shader
PublishedVersions/1.1.0/: imgui.ini
PublishedVersions/1.1.0/res/shaders/: 2dcamtest-vert.shader
PublishedVersions/1.1.1/: imgui.ini
PublishedVersions/1.1.1/GameEngine2020/: GameEngine2020.vtuneproj
PublishedVersions/1.1.1/GameEngine2020/r000hs/: MasterCollectionFlag.infoamplxe  MasterHasStarted.infoamplxe  r000hs.vtune
PublishedVersions/1.1.1/GameEngine2020/r001hs/: r001hs.vtune
PublishedVersions/1.1.1/GameEngine2020/r002hs/: r002hs.vtune
PublishedVersions/1.1.1/GameEngine2020/r003hs/: r003hs.vtune
PublishedVersions/1.1.1/GameEngine2020/r005hs/: r005hs.vtune
PublishedVersions/1.1.1/GameEngine2020/r006hs/: r006hs.vtune
PublishedVersions/1.1.1/GameEngine2020/r007hs/: r007hs.vtune
PublishedVersions/1.1.1/res/shaders/: MeshVert.shader  instancedRendererTest-vert.shader  lineFrag.shader  (+1 more)
PublishedVersions/final/: imgui.ini
TechnicalDocumentation/Game/: README.md
TechnicalDocumentation/Game/GameLogic/: README.md
TechnicalDocumentation/Game/GameObjects/: README.md
TechnicalDocumentation/Game/InputControllers/: README.md
TechnicalDocumentation/Game/Utilities/: README.md
TechnicalDocumentation/Game/WorldGeneration/: README.md
TechnicalDocumentation/GameEngine/: README.md  game_engine_architecture.psd
TechnicalDocumentation/GameEngine/Application/: README.md
TechnicalDocumentation/GameEngine/EventSubsystem/: README.md
TechnicalDocumentation/GameEngine/Utilities/: README.md
TechnicalDocumentation/Introduction/DocumentationFormat/: README.md
TechnicalDocumentation/Introduction/Overview/: README.md
TechnicalDocumentation/Introduction/Requirements/: README.md
TechnicalDocumentation/Introduction/Versions/: README.md
TechnicalDocumentation/Testing/ManualTesting/: README.md
(+308 files in other folders)
